crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E101_E101.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E101 Indentation contains mixed spaces and tabs
  --> E101.py:11:1
   |
 9 | def func_mixed_start_with_tab():
10 |     # E101
11 |       print("mixed starts with tab")
   | ^^^^^^
12 |
13 | def func_mixed_start_with_space():

E101 Indentation contains mixed spaces and tabs
  --> E101.py:15:1
13 | def func_mixed_start_with_space():
14 |     # E101
15 |                     print("mixed starts with space")
   | ^^^^^^^^^^^^^^^^^^^^
16 |
17 | def xyz():

E101 Indentation contains mixed spaces and tabs
  --> E101.py:19:1
   |
17 | def xyz():
18 |     # E101
19 |        print("xyz");
   | ^^^^^^^
