crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E113_E11.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
invalid-syntax: Expected an indented block after `if` statement
  --> E11.py:9:1
 7 | #: E112
 8 | if False:
 9 | print()
   | ^^^^^
10 | #: E113
11 | print()

E113 Unexpected indentation
  --> E11.py:12:1
   |
10 | #: E113
11 | print()
12 |     print()
   | ^^^^
13 | #: E114 E116
14 | mimetype = 'application/x-directory'

invalid-syntax: Unexpected indentation
  --> E11.py:12:1
   |
10 | #: E113
11 | print()
12 |     print()
   | ^^^^
13 | #: E114 E116
14 | mimetype = 'application/x-directory'

invalid-syntax: Expected a statement
  --> E11.py:14:1
   |
12 |     print()
13 | #: E114 E116
14 | mimetype = 'application/x-directory'
   | ^
15 |      # 'httpd/unix-directory'
16 | create_date = False

invalid-syntax: Expected an indented block after `if` statement
  --> E11.py:45:1
   |
43 | #: E112
44 | if False:  #
45 | print()
   | ^^^^^
46 | #:
47 | if False:
