crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E201_E20.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E201 [*] Whitespace after '('
 --> E20.py:2:6
  |
1 | #: E201:1:6
2 | spam( ham[1], {eggs: 2})
  |      ^
3 | #: E201:1:10
4 | spam(ham[ 1], {eggs: 2})
help: Remove whitespace before '('
  |
1 | #: E201:1:6
  - spam( ham[1], {eggs: 2})
2 + spam(ham[1], {eggs: 2})
3 | #: E201:1:10
  |

E201 [*] Whitespace after '['
 --> E20.py:4:10
  |
2 | spam( ham[1], {eggs: 2})
3 | #: E201:1:10
4 | spam(ham[ 1], {eggs: 2})
  |          ^
5 | #: E201:1:15
6 | spam(ham[1], { eggs: 2})
help: Remove whitespace before '['
  |
3 | #: E201:1:10
  - spam(ham[ 1], {eggs: 2})
4 + spam(ham[1], {eggs: 2})
5 | #: E201:1:15
  |

E201 [*] Whitespace after '{'
 --> E20.py:6:15
  |
4 | spam(ham[ 1], {eggs: 2})
5 | #: E201:1:15
6 | spam(ham[1], { eggs: 2})
  |               ^
7 | #: E201:1:6
8 | spam(    ham[1], {eggs: 2})
help: Remove whitespace before '{'
  |
5 | #: E201:1:15
  - spam(ham[1], { eggs: 2})
6 + spam(ham[1], {eggs: 2})
7 | #: E201:1:6
  |

E201 [*] Whitespace after '('
  --> E20.py:8:6
 6 | spam(ham[1], { eggs: 2})
 7 | #: E201:1:6
 8 | spam(    ham[1], {eggs: 2})
   |      ^^^^
 9 | #: E201:1:10
10 | spam(ham[    1], {eggs: 2})
help: Remove whitespace before '('
  |
7 | #: E201:1:6
  - spam(	ham[1], {eggs: 2})
8 + spam(ham[1], {eggs: 2})
9 | #: E201:1:10
  |

E201 [*] Whitespace after '['
  --> E20.py:10:10
   |
 8 | spam(    ham[1], {eggs: 2})
 9 | #: E201:1:10
10 | spam(ham[    1], {eggs: 2})
   |          ^^^^
11 | #: E201:1:15
12 | spam(ham[1], {    eggs: 2})
help: Remove whitespace before '['
   |
9  | #: E201:1:10
   - spam(ham[	1], {eggs: 2})
10 + spam(ham[1], {eggs: 2})
11 | #: E201:1:15
   |

E201 [*] Whitespace after '{'
  --> E20.py:12:15
   |
10 | spam(ham[    1], {eggs: 2})
11 | #: E201:1:15
12 | spam(ham[1], {    eggs: 2})
   |               ^^^^
13 | #: Okay
14 | spam(ham[1], {eggs: 2})
help: Remove whitespace before '{'
   |
11 | #: E201:1:15
   - spam(ham[1], {	eggs: 2})
12 + spam(ham[1], {eggs: 2})
13 | #: Okay
   |

E201 [*] Whitespace after '['
   --> E20.py:107:6
    |
106 | #: E201:1:6
107 | spam[ ~ham]
    |      ^
108 |
109 | #: Okay
help: Remove whitespace before '['
    |
106 | #: E201:1:6
    - spam[ ~ham]
107 + spam[~ham]
108 |
    |

E201 [*] Whitespace after '['
   --> E20.py:116:5
    |
114 | # F-strings
115 | f"{ {'a': 1} }"
116 | f"{[ { {'a': 1} } ]}"
    |     ^
117 | f"normal { {f"{ { [1, 2] } }" } } normal"
help: Remove whitespace before '['
    |
115 | f"{ {'a': 1} }"
    - f"{[ { {'a': 1} } ]}"
116 + f"{[{ {'a': 1} } ]}"
117 | f"normal { {f"{ { [1, 2] } }" } } normal"
    |

E201 [*] Whitespace after '['
   --> E20.py:145:5
    |
144 | #: E201:1:5
145 | ham[ : upper]
    |     ^
146 |
147 | #: Okay
help: Remove whitespace before '['
    |
144 | #: E201:1:5
    - ham[ : upper]
145 + ham[: upper]
146 |
    |

E201 [*] Whitespace after '['
   --> E20.py:195:5
    |
193 | # t-strings
194 | t"{ {'a': 1} }"
195 | t"{[ { {'a': 1} } ]}"
    |     ^
196 | t"normal { {t"{ { [1, 2] } }" } } normal"
help: Remove whitespace before '['
    |
194 | t"{ {'a': 1} }"
    - t"{[ { {'a': 1} } ]}"
195 + t"{[{ {'a': 1} } ]}"
196 | t"normal { {t"{ { [1, 2] } }" } } normal"
    |
