crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E202_E20.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E202 [*] Whitespace before ')'
  --> E20.py:19:23
   |
18 | #: E202:1:23
19 | spam(ham[1], {eggs: 2} )
   |                       ^
20 | #: E202:1:22
21 | spam(ham[1], {eggs: 2 })
help: Remove whitespace before ')'
   |
18 | #: E202:1:23
   - spam(ham[1], {eggs: 2} )
19 + spam(ham[1], {eggs: 2})
20 | #: E202:1:22
   |

E202 [*] Whitespace before '}'
  --> E20.py:21:22
   |
19 | spam(ham[1], {eggs: 2} )
20 | #: E202:1:22
21 | spam(ham[1], {eggs: 2 })
   |                      ^
22 | #: E202:1:11
23 | spam(ham[1 ], {eggs: 2})
help: Remove whitespace before '}'
   |
20 | #: E202:1:22
   - spam(ham[1], {eggs: 2 })
21 + spam(ham[1], {eggs: 2})
22 | #: E202:1:11
   |

E202 [*] Whitespace before ']'
  --> E20.py:23:11
   |
21 | spam(ham[1], {eggs: 2 })
22 | #: E202:1:11
23 | spam(ham[1 ], {eggs: 2})
   |           ^
24 | #: E202:1:23
25 | spam(ham[1], {eggs: 2}    )
help: Remove whitespace before ']'
   |
22 | #: E202:1:11
   - spam(ham[1 ], {eggs: 2})
23 + spam(ham[1], {eggs: 2})
24 | #: E202:1:23
   |

E202 [*] Whitespace before ')'
  --> E20.py:25:23
   |
23 | spam(ham[1 ], {eggs: 2})
24 | #: E202:1:23
25 | spam(ham[1], {eggs: 2}    )
   |                       ^^^^
26 | #: E202:1:22
27 | spam(ham[1], {eggs: 2    })
help: Remove whitespace before ')'
   |
24 | #: E202:1:23
   - spam(ham[1], {eggs: 2}	)
25 + spam(ham[1], {eggs: 2})
26 | #: E202:1:22
   |

E202 [*] Whitespace before '}'
  --> E20.py:27:22
   |
25 | spam(ham[1], {eggs: 2}    )
26 | #: E202:1:22
27 | spam(ham[1], {eggs: 2    })
   |                      ^^^^
28 | #: E202:1:11
29 | spam(ham[1    ], {eggs: 2})
help: Remove whitespace before '}'
   |
26 | #: E202:1:22
   - spam(ham[1], {eggs: 2	})
27 + spam(ham[1], {eggs: 2})
28 | #: E202:1:11
   |

E202 [*] Whitespace before ']'
  --> E20.py:29:11
   |
27 | spam(ham[1], {eggs: 2    })
28 | #: E202:1:11
29 | spam(ham[1    ], {eggs: 2})
   |           ^^^^
30 | #: Okay
31 | spam(ham[1], {eggs: 2})
help: Remove whitespace before ']'
   |
28 | #: E202:1:11
   - spam(ham[1	], {eggs: 2})
29 + spam(ham[1], {eggs: 2})
30 | #: Okay
   |

E202 [*] Whitespace before ']'
   --> E20.py:116:18
    |
114 | # F-strings
115 | f"{ {'a': 1} }"
116 | f"{[ { {'a': 1} } ]}"
    |                  ^
117 | f"normal { {f"{ { [1, 2] } }" } } normal"
help: Remove whitespace before ']'
    |
115 | f"{ {'a': 1} }"
    - f"{[ { {'a': 1} } ]}"
116 + f"{[ { {'a': 1} }]}"
117 | f"normal { {f"{ { [1, 2] } }" } } normal"
    |

E202 [*] Whitespace before ']'
   --> E20.py:172:12
    |
171 | #: E202:1:12
172 | ham[upper : ]
    |            ^
173 |
174 | #: E203:1:10
help: Remove whitespace before ']'
    |
171 | #: E202:1:12
    - ham[upper : ]
172 + ham[upper :]
173 |
    |

E202 [*] Whitespace before ']'
   --> E20.py:195:18
    |
193 | # t-strings
194 | t"{ {'a': 1} }"
195 | t"{[ { {'a': 1} } ]}"
    |                  ^
196 | t"normal { {t"{ { [1, 2] } }" } } normal"
help: Remove whitespace before ']'
    |
194 | t"{ {'a': 1} }"
    - t"{[ { {'a': 1} } ]}"
195 + t"{[ { {'a': 1} }]}"
196 | t"normal { {t"{ { [1, 2] } }" } } normal"
    |
