crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E203_E20.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E203 [*] Whitespace before ':'
  --> E20.py:51:10
   |
50 | #: E203:1:10
51 | if x == 4 :
   |          ^
52 |     print(x, y)
53 |     x, y = y, x
help: Remove whitespace before ':'
   |
50 | #: E203:1:10
   - if x == 4 :
51 + if x == 4:
52 |     print(x, y)
   |

E203 [*] Whitespace before ':'
  --> E20.py:55:10
   |
53 |     x, y = y, x
54 | #: E203:1:10
55 | if x == 4    :
   |          ^^^^
56 |     print(x, y)
57 |     x, y = y, x
help: Remove whitespace before ':'
   |
54 | #: E203:1:10
   - if x == 4	:
55 + if x == 4:
56 |     print(x, y)
   |

E203 [*] Whitespace before ';'
  --> E20.py:60:16
   |
58 | #: E203:2:15 E702:2:16
59 | if x == 4:
60 |     print(x, y) ; x, y = y, x
   |                ^
61 | #: E203:2:15 E702:2:16
62 | if x == 4:
help: Remove whitespace before ';'
   |
59 | if x == 4:
   -     print(x, y) ; x, y = y, x
60 +     print(x, y); x, y = y, x
61 | #: E203:2:15 E702:2:16
   |

E203 [*] Whitespace before ';'
  --> E20.py:63:16
   |
61 | #: E203:2:15 E702:2:16
62 | if x == 4:
63 |     print(x, y)    ; x, y = y, x
   |                ^^^^
64 | #: E203:3:13
65 | if x == 4:
help: Remove whitespace before ';'
   |
62 | if x == 4:
   -     print(x, y)	; x, y = y, x
63 +     print(x, y); x, y = y, x
64 | #: E203:3:13
   |

E203 [*] Whitespace before ','
  --> E20.py:67:13
   |
65 | if x == 4:
66 |     print(x, y)
67 |     x, y = y , x
   |             ^
68 | #: E203:3:13
69 | if x == 4:
help: Remove whitespace before ','
   |
66 |     print(x, y)
   -     x, y = y , x
67 +     x, y = y, x
68 | #: E203:3:13
   |

E203 [*] Whitespace before ','
  --> E20.py:71:13
   |
69 | if x == 4:
70 |     print(x, y)
71 |     x, y = y    , x
   |             ^^^^
72 | #: Okay
73 | if x == 4:
help: Remove whitespace before ','
   |
70 |     print(x, y)
   -     x, y = y	, x
71 +     x, y = y, x
72 | #: Okay
   |

E203 [*] Whitespace before ':'
  --> E20.py:86:61
   |
84 | #: E203 multi whitespace before :
85 | predictions = predictions[
86 |     len(past_covariates) // datamodule.hparams["downsample"]  :
   |                                                             ^^
87 | ]
help: Remove whitespace before ':'
   |
85 | predictions = predictions[
   -     len(past_covariates) // datamodule.hparams["downsample"]  :
86 +     len(past_covariates) // datamodule.hparams["downsample"] :
87 | ]
   |

E203 [*] Whitespace before ':'
  --> E20.py:91:61
   |
89 | #: E203 tab before :
90 | predictions = predictions[
91 |     len(past_covariates) // datamodule.hparams["downsample"]    :
   |                                                             ^^^^
92 | ]
help: Remove whitespace before ':'
   |
90 | predictions = predictions[
   -     len(past_covariates) // datamodule.hparams["downsample"]	:
91 +     len(past_covariates) // datamodule.hparams["downsample"] :
92 | ]
   |

E203 [*] Whitespace before ':'
   --> E20.py:101:61
    |
 99 | #: E203 multi whitespace before : with line a comment
100 | predictions = predictions[
101 |     len(past_covariates) // datamodule.hparams["downsample"]  :  # Just some comment
    |                                                             ^^
102 | ]
help: Remove whitespace before ':'
    |
100 | predictions = predictions[
    -     len(past_covariates) // datamodule.hparams["downsample"]  :  # Just some comment
101 +     len(past_covariates) // datamodule.hparams["downsample"] :  # Just some comment
102 | ]
    |

E203 [*] Whitespace before ':'
   --> E20.py:126:16
    |
125 | #: E203:1:19
126 | {lower + offset : upper + offset}
    |                ^
127 |
128 | #: E203:1:19
help: Remove whitespace before ':'
    |
125 | #: E203:1:19
    - {lower + offset : upper + offset}
126 + {lower + offset: upper + offset}
127 |
    |

E203 [*] Whitespace before ':'
   --> E20.py:129:19
    |
128 | #: E203:1:19
129 | ham[lower + offset  : upper + offset]
    |                   ^^
130 |
131 | #: Okay
help: Remove whitespace before ':'
    |
128 | #: E203:1:19
    - ham[lower + offset  : upper + offset]
129 + ham[lower + offset: upper + offset]
130 |
    |

E203 [*] Whitespace before ':'
   --> E20.py:157:21
    |
156 | #: E203:1:21
157 | ham[lower + offset : : upper + offset]
    |                     ^
158 |
159 | #: E203:1:20
help: Remove whitespace before ':'
    |
156 | #: E203:1:21
    - ham[lower + offset : : upper + offset]
157 + ham[lower + offset :: upper + offset]
158 |
    |

E203 [*] Whitespace before ':'
   --> E20.py:160:20
    |
159 | #: E203:1:20
160 | ham[lower + offset: :upper + offset]
    |                    ^
161 |
162 | #: E203:1:20
help: Remove whitespace before ':'
    |
159 | #: E203:1:20
    - ham[lower + offset: :upper + offset]
160 + ham[lower + offset::upper + offset]
161 |

E203 [*] Whitespace before ':'
   --> E20.py:163:20
162 | #: E203:1:20
163 | ham[{lower + offset : upper + offset} : upper + offset]
    |                    ^
164 |
165 | #: Okay
help: Remove whitespace before ':'
    |
162 | #: E203:1:20
    - ham[{lower + offset : upper + offset} : upper + offset]
163 + ham[{lower + offset: upper + offset} : upper + offset]
164 |
    |

E203 [*] Whitespace before ':'
   --> E20.py:175:10
    |
174 | #: E203:1:10
175 | ham[upper  :]
    |          ^^
176 |
177 | #: Okay
help: Remove whitespace before ':'
    |
174 | #: E203:1:10
    - ham[upper  :]
175 + ham[upper:]
176 |
    |

E203 [*] Whitespace before ':'
   --> E20.py:181:14
    |
180 | #: E203:1:13
181 | ham[lower + 1  :, "columnname"]
    |              ^^
182 |
183 | #: Okay
help: Remove whitespace before ':'
    |
180 | #: E203:1:13
    - ham[lower + 1  :, "columnname"]
181 + ham[lower + 1:, "columnname"]
182 |
    |

E203 [*] Whitespace before ':'
   --> E20.py:187:17
    |
186 | #: E203:1:13
187 | f"{ham[lower + 1  :, "columnname"]}"
    |                 ^^
188 |
189 | #: Okay: https://github.com/astral-sh/ruff/issues/12023
help: Remove whitespace before ':'
    |
186 | #: E203:1:13
    - f"{ham[lower + 1  :, "columnname"]}"
187 + f"{ham[lower + 1:, "columnname"]}"
188 |
    |

E203 [*] Whitespace before ':'
   --> E20.py:205:17
    |
204 | #: E203:1:13
205 | t"{ham[lower + 1  :, "columnname"]}"
    |                 ^^
help: Remove whitespace before ':'
    |
204 | #: E203:1:13
    - t"{ham[lower + 1  :, "columnname"]}"
205 + t"{ham[lower + 1:, "columnname"]}"
206 |
    |
