crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E204_E204.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E204 [*] Whitespace after decorator
  --> E204.py:14:2
   |
13 | # E204
14 | @ foo
   |  ^
15 | def baz():
16 |     print('baz')
help: Remove whitespace
   |
13 | # E204
   - @ foo
14 + @foo
15 | def baz():
   |

E204 [*] Whitespace after decorator
  --> E204.py:25:6
   |
24 |     # E204
25 |     @ foo
   |      ^
26 |     def baz(self):
27 |         print('baz')
help: Remove whitespace
   |
24 |     # E204
   -     @ foo
25 +     @foo
26 |     def baz(self):
   |

E204 [*] Whitespace after decorator
  --> E204.py:31:2
   |
30 | # E204
31 | @ \
   |  ^^
32 | foo
33 | def baz():
help: Remove whitespace
   |
30 | # E204
   - @ \
   - foo
31 + @foo
32 | def baz():
   |
